--- a/Site_Honkai/personagens/asta.html
+++ b/Site_Honkai/personagens/asta.html
@@ -60,17 +60,17 @@
     </table>
         <div>
     <h2><span class="mw-headline" id="Ascensions_and_Stats"><font style="vertical-align: inherit;">
-      <font style="vertical-align: inherit;">Ascensões e estatísticas</font></font></span></h2> 
+    <font style="vertical-align: inherit;">Ascensões e estatísticas</font></font></span></h2> 
     <table>
         <thead>
-          <tr>
+        <tr>
             <th>Fase de Ascensão</th>
             <th>Level</th>
             <th>Base HP</th>
             <th>Base ATK</th>
             <th>Base DEF</th>
             <th>Base SPD</th>
-          </tr>
+        </tr>
         </thead>
         <tbody>
           <tr class="alternating1">
@@ -194,37 +194,37 @@
           <td>0 → 1 ✦</td>
           <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3.200</td>
           <td></td>
-          <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
+          <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">4</td>
         </tr>
         <tr>
           <td>1 → 2 ✦</td>
           <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
+            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Material A">8</td>
         </tr>
         <tr>
           <td>2 → 3 ✦</td>
           <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">2</td>
+            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">5</td>
         </tr>
         <tr>
           <td>3 → 4 ✦</td>
           <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">5</td>
+            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Material A">8</td>
         </tr>
         <tr>
           <td>4 → 5 ✦</td>
           <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">15</td>
+            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">5</td>
         </tr>
         <tr>
           <td>5 → 6 ✦</td>
           <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">248,000</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
-            <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Endotherm_Chitin.webp" alt="Material A">28</td>
+            <td><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Material A">7</td>
         </tr>
       </tbody>
     </table>
@@ -245,51 +245,56 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Lightning_Rush.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Spectrum_Beam.webp" alt="Basic"></td>
         <td>ATK básico</td>
-        <td>Relâmpago</td>
-        <td>Causa Lightning DMG igual a 50%–130% do ATK de Arlan para um único inimigo.</td>
+        <td>Feixe de Espectro</td>
+        <td>Causa Fire DMG igual a 50%–130% do ATK de Asta para um único inimigo.</td>
         <td>Alvo único</td>
         <td>Geração: 20</td>
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Shackle_Breaker.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Meteor_Storm.webp" alt="Skill"></td>
         <td>Skill</td>
-        <td>Quebra-grilhões</td>
-        <td>Consome o HP de Arlan igual a 15% de seu HP máximo para lidar com Lightning DMG igual a 120%–300% do ATK de Arlan a um único inimigo. Se Arlan não tiver HP suficiente, seu HP será reduzido para 1 após usar sua Skill.</td>
-        <td>Alvo único</td>
-        <td>Geração: 30</td>
-        <td>60</td>
+        <td>Tempestade de Meteoros</td>
+        <td>Causa Fire DMG igual a 25%–62,5% do ATK de Asta a um único inimigo e ainda mais DMG por 4 vezes extras, com cada vez causando Fire DMG igual a 25%–62,5% do ATK de Asta a um inimigo aleatório.</td>
+        <td>Quicar</td>
+        <td>Geração: 6 × 5 (E0)
+          6 × 6 (E1)</td>
+        <td>30 (Primeiro Acerto)
+          15 (Acertos Subseqüentes)</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Frenzied_Punishment.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Astral_Blessing.webp" alt="Ult"></td>
         <td>Ultimate</td>
-        <td>Punição Frenética</td>
-        <td>Causa Lightning DMG igual a 192%–348% do ATK de Arlan para um único inimigo e Lightning DMG igual a 96%–192% do ATK de Arlan para inimigos adjacentes a ele.</td>
-        <td>Explosão</td>
-        <td>Custo: 110
+        <td>Bênção Astral</td>
+        <td>Aumenta o SPD de todos os aliados em 36–57 por 2 turno(s).</td>
+        <td>Apoiar</td>
+        <td>Custo: 120
           Geração: 5</td>
-        <td>60</td>
+        <td></td>
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Pain_and_Anger.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Astrometry.webp" alt="Talent"></td>
         <td>Talento</td>
-        <td>Dor e raiva</td>
-        <td>Aumenta o DMG de Arlan para cada porcentagem de HP abaixo de seu HP máximo, até um máximo de 36% a 90% a mais de DMG.</td>
-        <td>Melhorar</td>
+        <td>Astrometria</td>
+        <td>Ganha 1 pilha de Carregamento para cada inimigo diferente atingido por Asta, mais uma pilha extra se o inimigo atingido tiver Fraqueza de Fogo.
+          Para cada pilha de Charging Asta, o ATK de todos os aliados aumenta em 7,0%–17,5% , até 5 vez(es).
+          A partir de seu segundo turno, a contagem de pilha de carregamento de Asta é reduzida em 3 no início de cada turno./td>
+        <td>Apoiar</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Swift_Harvest.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Skill_Miracle_Flash.webp" alt="Talent"></td>
         <td>Técnica</td>
-        <td>Colheita rápida</td>
-        <td>Imediatamente ataca o inimigo. Depois de entrar na batalha, causa Lightning DMG igual a 80% do ATK de Arlan para todos os inimigos.</td>
+        <td>
+          Flash Milagroso</td>
+        <td>Imediatamente ataca o inimigo. Depois de entrar na batalha, causa Fire DMG igual a 50% do ATK de Asta para todos os inimigos.</td>
         <td></td>
         <td></td>
-        <td></td>
+        <td>60</td>
       </tr>
     </tbody>
   </table>
@@ -306,42 +311,43 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_To_the_Bitter_End.webp" alt="Eidolon"></td>
-          <td>Para o amargo fim</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Star_Sings_Sans_Verses_or_Vocals.webp" alt="Eidolon"></td>
+          <td>Estrela Canta Sem Versos ou Vocais</td>
           <td>1</td>
-          <td>Quando o HP é menor ou igual a 50% do Max HP, aumenta o DMG da Skill em 10%.</td>
+          <td>Ao usar Skill, causa DMG por 1 vez extra a um inimigo aleatório.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Breaking_Free.webp" alt="Eidolon"></td>
-          <td>Libertando-se</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Moon_Speaks_in_Wax_and_Wane.webp" alt="Eidolon"></td>
+          <td>A Lua Fala em Crescente e Minguante</td>
           <td>2</td>
-          <td>Usar Skill ou Ultimate remove 1 debuff de si mesmo.</td>
+          <td>Depois de usar seu Ultimate, as pilhas de carregamento de Asta não serão reduzidas no próximo turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Power_Through.webp" alt="Eidolon"></td>
-          <td>Através do poder</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Meteor_Showers_for_Wish_and_Want.webp" alt="Eidolon"></td>
+          <td>Chuvas de meteoros para desejo e desejo</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
-            ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
-        </tr>
-        <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Turn_the_Tables.webp" alt="Eidolon"></td>
-          <td>Vire as mesas</td>
-          <td>4</td>
-          <td>Quando atingido por um golpe mortal após entrar na batalha, em vez de ser derrubado, Arlan restaura imediatamente seu HP para 25% de seu HP máximo. Este efeito é removido automaticamente após ser acionado uma vez ou após 2 turno(s) decorridos.</td>
-        </tr>
-        <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Hammer_and_Tongs.webp" alt="Eidolon"></td>
-          <td>Martelo e tenazes</td>
-          <td>5</td>
-          <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Self-Sacrifice.webp" alt="Eidolon"></td>
-          <td>Auto-sacrifício</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Aurora_Basks_in_Beauty_and_Bliss.webp" alt="Eidolon"></td>
+          <td>Aurora se deleita em beleza e felicidade</td>
+          <td>4</td>
+          <td>A taxa de regeneração de energia de Asta aumenta em 15% quando ela tem 2 ou mais pilhas de carregamento.</td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Nebula_Secludes_in_Cold_Cosmos.webp" alt="Eidolon"></td>
+          <td>Nebulosa se isola no cosmos frio</td>
+          <td>5</td>
+          <td>Nível final +2, até um máximo de Lv. 15.
+            ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Asta/Eidolons/Eidolon_Galaxy_Dreams_in_Calm_and_Comfort.webp" alt="Eidolon"></td>
+          <td>
+            Sonhos da Galáxia em calma e conforto</td>
           <td>6</td>
-          <td>Quando o HP cai para 50% ou menos, o Ultimate causa 20% a mais de DMG. O multiplicador DMG de DMG tomado pelo inimigo alvo agora se aplica aos inimigos adjacentes também.</td>
+          <td>A(s) pilha(s) de carregamento perdida(s) em cada turno é(são) reduzida(s) em 1.</td>
         </tr>
       </tbody>
     </table>
@@ -357,12 +363,12 @@
       <tbody>
         <tr>
           <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">8</td>
         </tr>
       </tbody>
     </table>
@@ -375,12 +381,12 @@
       <tbody>
         <tr>
           <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
-          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">12</td>
-          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Badge.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Insignia.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Silvermane_Medal.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Harmonic_Tune.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Ancestral_Hymn.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Stellaris_Symphony.webp" alt="Custo">23</td>
           <td class="material-cell"><img src="/Site_Honkai/Itens/Destroyer.webp" alt="Custo">3</td>
           <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
