--- a/Site_Honkai/personagens/dan_heng.html
+++ b/Site_Honkai/personagens/dan_heng.html
@@ -195,39 +195,39 @@
         <tbody>
           <tr>
             <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">5</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">10</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">3</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">2</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">7</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">5</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
           </tr>
           <tr>
             <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">20</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">6</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,400</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">15</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
           </tr>
           <tr>
             <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">35</td>
-              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">9</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">128,000</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Storm_Eye.webp" alt="Material A">28</td>
+              <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
           </tr>
         </tbody>
       </table>
@@ -248,53 +248,52 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_I_Want_to_Help.webp" alt="Basic"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Cloudlancer_Art_North_Wind.webp" alt="Basic"></td>
         <td>ATK básico</td>
-        <td>Eu quero ajudar</td>
-        <td>Causa DANO Físico igual a 50%–130% do ATK de Clara a um único inimigo.</td>
+        <td>Arte Cloudlancer: Vento Norte</td>
+        <td>Causa Wind DMG igual a 50%–130% do ATK de Dan Heng a um único inimigo.</td>
         <td>Alvo único</td>
         <td>Geração: 20</td>
         <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_Svarog_Watches_Over_You.webp" alt="Skill"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Cloudlancer_Art_Torrent.webp" alt="Skill"></td>
         <td>Skill</td>
-        <td>Svarog cuida de você</td>
-        <td>Causa DANO Físico igual a 60%–150% do ATK de Clara a todos os inimigos e, adicionalmente, causa DANO Físico igual a 60%–150% do ATK de Clara aos inimigos marcados por Svarog com uma Marca de Contra-ataque.
-            Todas as marcas de contra-ataque serão removidas depois que esta habilidade for usada.</td>
-        <td>AoE</td>
+        <td>Arte Cloudlancer: Torrent</td>
+        <td>Causa Wind DMG igual a 130%–325% do ATK de Dan Heng a um único inimigo.
+            Em um acerto CRIT, há uma chance básica de 100% de reduzir a SPD do alvo em 12% por 2 turno(s).</td>
+        <td>Alvo único</td>
         <td>Geração: 30</td>
-        <td>30</td>
+        <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_Promise_Not_Command.webp" alt="Ult"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Ethereal_Dream.webp" alt="Ult"></td>
         <td>Ultimate</td>
-        <td>Prometa, não mande</td>
-        <td>Depois que Clara usa o Ultimate, o DMG causado a ela é reduzido em 15% a 30% a mais e ela aumenta muito as chances de ser atacada por inimigos por 2 turnos.
-            Além disso, o contador de Svarog foi aprimorado. Quando um aliado é atacado, Svarog imediatamente lança um Counter , e seu multiplicador de DMG contra o inimigo aumenta em 96%–192% . Inimigos adjacentes a ele recebem 50% do DMG causado ao inimigo alvo. Contadores aprimorados podem entrar em vigor 2 vezes.</td>
-        <td>Melhorar</td>
+        <td>Sonho Etéreo</td>
+        <td>Causa Wind DMG igual a 240%–480% do ATK de Dan Heng a um único inimigo. Se o inimigo for retardado, o multiplicador DMG do Ultimate aumenta em 72%–144% .</td>
+        <td>Alvo único</td>
         <td>Custo: 110
             Geração: 5</td>
-        <td></td>
+        <td>90</td>
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_Because_We_are_Family (1).webp" alt="Talent"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Superiority_of_Reach.webp" alt="Talent"></td>
         <td>Talento</td>
-        <td>Porque Somos Família</td>
-        <td>Sob a proteção de Svarog, o DMG tomado por Clara quando atingido por ataques inimigos é reduzido em 10%. Svarog marcará os inimigos que atacarem Clara com sua Marca de Contra-ataque e retaliará com um Contra-ataque , causando DANO Físico igual a 80%–200% do ATK de Clara.</td>
-        <td>Alvo único</td>
-        <td>Geração: 5</td>
-        <td>30</td>
+        <td>Superioridade de Alcance</td>
+        <td>Quando Dan Heng é o alvo da habilidade de um aliado, o Wind RES PEN de seu próximo ataque aumenta em 18%–45% . Este efeito pode ser acionado novamente após 2 turno(s).</td>
+        <td>Melhorar</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Skill_A_Small_Price_for_Victory.webp" alt="Talent"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Skill_Splitting_Spearhead.webp" alt="Talent"></td>
         <td>Técnica</td>
-        <td>Um pequeno preço pela vitória</td>
-        <td>Imediatamente ataca o inimigo. Ao entrar na batalha, a chance de Clara ser atacada por inimigos aumenta por 2 turno(s).</td>
+        <td>Ponta de Lança Dividida</td>
+        <td>Depois que Dan Heng usa sua técnica, seu ATK aumenta em 40% no início da próxima batalha por 3 turno(s).</td>
+        <td>Melhorar</td>
         <td></td>
         <td></td>
-        <td>60</td>
       </tr>
     </tbody>
   </table>
@@ -311,43 +310,42 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_A_Tall_Figure.webp" alt="Eidolon"></td>
-          <td>Uma figura alta</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_The_Higher_You_Fly_the_Harder_You_Fall.webp" alt="Eidolon"></td>
+          <td>Quanto mais alto você voa, maior é a queda</td>
           <td>1</td>
-          <td>Usar Skill não removerá Marks of Counter do inimigo.</td>
+          <td>Quando a porcentagem de HP atual do inimigo alvo é maior ou igual a 50%, a taxa CRIT aumenta em 12%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_A_Tight_Embrace.webp" alt="Eidolon"></td>
-          <td>Um Abraço Apertado</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_Quell_the_Venom_.webp" alt="Eidolon"></td>
+          <td>Suprima o Venom Octet, Extinga o Vice O'Flame</td>
           <td>2</td>
-          <td>Depois de usar o Ultimate, o ATK aumenta em 30% por 2 turno(s).</td>
+          <td>Reduz o cooldown do talento em 1 turno.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_Cold_Steel_Armor.webp" alt="Eidolon"></td>
-          <td>Armadura de aço frio</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_Seen_and_Unseen.webp" alt="Eidolon"></td>
+          <td>Visto e não visto</td>
           <td>3</td>
           <td>Habilidade Nv. +2, até um máximo de Lv. 15.
-            ATK Básico Lv. +1, até um máximo de Lv. 10.
-            </td>
+            ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_Family_Warmth.webp" alt="Eidolon"></td>
-          <td>calor da família</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_Roaring_Dragon_and_Soaring_Sun.webp" alt="Eidolon"></td>
+          <td>Dragão Rugindo e Sol Nascente</td>
           <td>4</td>
-          <td>Depois que Clara é atingida, o DMG recebido por Clara é reduzido em 30%. Este efeito dura até o início de seu próximo turno.</td>
+          <td>Quando Dan Heng usa seu Ultimate para derrotar um inimigo, sua próxima ação é Avançar em 100%.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_A_Small_Promise.webp" alt="Eidolon"></td>
-          <td>Uma Pequena Promessa</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_A_Drop_of_Rain_Feeds_a_Torrent.webp" alt="Eidolon"></td>
+          <td>Uma gota de chuva alimenta uma torrente</td>
           <td>5</td>
           <td>Nível final +2, até um máximo de Lv. 15.
             Talento Nv. +2, até um máximo de Lv. 15.</td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/Clara/Eidolons/Eidolon_Long_Company.webp" alt="Eidolon"></td>
-          <td>Compania Duradoura</td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Dan Heng/Eidolons/Eidolon_The_Troubled_Soul_Lies_in_Wait.webp" alt="Eidolon"></td>
+          <td>A alma perturbada está à espreita</td>
           <td>6</td>
-          <td>Depois que outros aliados são atingidos, Svarog também tem 50% de chance fixa de acionar um Contra-ataque no atacante e marcá-lo com uma Marca de Contra-ataque. Ao usar o Ultimate, o número de contadores aprimorados aumenta em 1.</td>
+          <td>O estado lento desencadeado por Skill reduz o SPD do inimigo em 8%.</td>
         </tr>
       </tbody>
     </table>
