--- a/Teste/rascunhos_4.html
+++ b/Teste/rascunhos_4.html
@@ -8,11 +8,11 @@
     <div class="container">
         <div class="character-container">
         <div class="character-box">
-            <img class="character-image" src="" alt="Imagem do Personagem">
+            <img class="character-image" src="/Site_Honkai/Art_splash/" alt="Imagem do Personagem">
         </div>
         <div class="quote-container">
           <div class="quote-box">
-            <i><sup id="cite_ref-Arlan_EN/JP_1-2" class="reference">"<a href="#cite_note-_EN/JP-1"></a></sup></i>
+            <i><sup id="cite_ref-Arlan_EN/JP_1-2" class="reference"><a href="#cite_note-_EN/JP-1"></a></sup></i>
           </div>
         </div>
     <table class="character-table">
@@ -194,13 +194,13 @@
             <td>0 → 1 ✦</td>
             <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3,200</td>
             <td></td>
-            <td><img src="" alt="Material A">4</td>
+            <td><img src="/Site_Honkai/" alt="Material A">4</td>
           </tr>
           <tr>
             <td>1 → 2 ✦</td>
             <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
               <td></td>
-              <td><img src="" alt="Material A">8</td>
+              <td><img src="/Site_Honkai/" alt="Material A">8</td>
           </tr>
           <tr>
             <td>2 → 3 ✦</td>
@@ -337,7 +337,7 @@
         <tr>
           <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Eidolon"></td>
           <td></td>
-          <td></td>
+          <td>6</td>
           <td></td>
         </tr>
       </tbody>
