--- a/Teste/rascunhos_5.html
+++ b/Teste/rascunhos_5.html
@@ -245,7 +245,7 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Basic"></td>
+        <td class="dark-background"><img src="" alt="Basic"></td>
         <td>ATK básico</td>
         <td></td>
         <td></td>
@@ -254,7 +254,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Skill"></td>
+        <td class="dark-background"><img src="" alt="Skill"></td>
         <td>Skill</td>
         <td></td>
         <td></td>
@@ -263,7 +263,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Ult"></td>
+        <td class="dark-background"><img src="" alt="Ult"></td>
         <td>Ultimate</td>
         <td></td>
         <td></td>
@@ -273,7 +273,7 @@
         
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Talent"></td>
+        <td class="dark-background"><img src="" alt="Talent"></td>
         <td>Talento</td>
         <td></td>
         <td></td>
@@ -282,7 +282,7 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Talent"></td>
+        <td class="dark-background"><img src="" alt="Talent"></td>
         <td>Técnica</td>
         <td></td>
         <td></td>
@@ -305,37 +305,37 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Eidolon"></td>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
           <td></td>
           <td>1</td>
           <td></td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Eidolon"></td>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
           <td></td>
           <td>2</td>
           <td></td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Eidolon"></td>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
           <td></td>
           <td>3</td>
           <td></td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Eidolon"></td>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
           <td></td>
           <td>4</td>
           <td></td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Eidolon"></td>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
           <td></td>
           <td>5</td>
           <td></td>
         </tr>
         <tr>
-          <td class="dark-background"><img src="/Site_Honkai/habilidades/" alt="Eidolon"></td>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
           <td></td>
           <td>6</td>
           <td></td>
