--- a/Site_Honkai/personagens/trailblazer.html
+++ b/Site_Honkai/personagens/trailblazer.html
@@ -15,16 +15,6 @@
             <div class="character-box">
                 <img class="character-image" src="/Site_Honkai/Art_splash/Character_Trailblazer_29_Destruction_Splash_Art.webp" alt="Imagem do Personagem">
             </div>
-            <div class="container">
-                <div class="character-container">
-                <div class="character-box">
-                    <img class="character-image" src="/Site_Honkai/Art_splash/Character_Trailblazer_29_Preservation2_Splash_Art.webp" alt="Imagem do Personagem">
-                </div>
-                <div class="container">
-                    <div class="character-container">
-                    <div class="character-box">
-                        <img class="character-image" src="/Site_Honkai/Art_splash/Character_Trailblazer_29_Preservation_Splash_Art.webp" alt="Imagem do Personagem">
-                    </div>
         <div class="quote-container">
           <div class="quote-box">
             <i><sup id="cite_ref-Arlan_EN/JP_1-2" class="reference">"Regras são feitas para serem quebradas."<a href="#cite_note-trailblazer_EN/JP-1"></a></sup></i>
@@ -409,6 +399,345 @@
       </tbody>
     </table>
 </div>
+    <div class="container">
+        <div class="character-container">
+        <div class="character-box">
+            <img class="character-image" src="/Site_Honkai/Art_splash/Character_Trailblazer_29_Preservation2_Splash_Art.webp" alt="Imagem do Personagem">
+        </div>
+        <div class="container">
+          <div class="character-container">
+          <div class="character-box">
+              <img class="character-image" src="/Site_Honkai/Art_splash/Character_Trailblazer_29_Preservation_Splash_Art.webp" alt="Imagem do Personagem">
+          </div>
+        <div class="quote-container">
+          <div class="quote-box">
+            <i><sup id="cite_ref-Arlan_EN/JP_1-2" class="reference"><a href="#cite_note-_EN/JP-1"></a></sup></i>
+          </div>
+        </div>
+    <h2><span class="mw-headline" id="Ascensions_and_Stats"><font style="vertical-align: inherit;">
+    <font style="vertical-align: inherit;">Ascensões e estatísticas</font></font></span></h2> 
+    <table>
+        <thead>
+        <tr>
+            <th>Fase de Ascensão</th>
+            <th>Level</th>
+            <th>Base HP</th>
+            <th>Base ATK</th>
+            <th>Base DEF</th>
+            <th>Base SPD</th>
+        </tr>
+        </thead>
+        <tbody>
+          <tr class="alternating1">
+            <td rowspan="2">0✦</td>
+            <td class="level-container">1/20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating1">
+            <td class="level-container">20/20</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating2">
+            <td rowspan="2">1✦</td>
+            <td class="level-container">20/30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating2">
+            <td class="level-container">30/30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating1">
+            <td rowspan="2">2✦</td>
+            <td class="level-container">30/40</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating1">
+            <td class="level-container">40/40</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating2">
+            <td rowspan="2">3✦</td>
+            <td class="level-container">40/50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating2">
+            <td class="level-container">50/50</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating1">
+            <td rowspan="2">4✦</td>
+            <td class="level-container">50/60</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating1">
+            <td class="level-container">60/60</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating2">
+            <td rowspan="2">5✦</td>
+            <td class="level-container">60/70</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating2">
+            <td class="level-container">70/70</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating1">
+            <td rowspan="2">6✦</td>
+            <td class="level-container">70/80</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="alternating1">
+            <td class="level-container">80/80</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+    </table>
+    <table>
+        <thead>
+          <tr>
+            <th>Nível</th>
+            <th>Custo de Evolução</th>
+            <th>Materiais de Ascensão do Personagem</th>
+            <th>Materiais Necessários</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>0 → 1 ✦</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
+            <td></td>
+            <td><img src="/Site_Honkai/" alt="Material A">5</td>
+          </tr>
+          <tr>
+            <td>1 → 2 ✦</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+              <td></td>
+              <td><img src="/Site_Honkai/" alt="Material A">10</td>
+          </tr>
+          <tr>
+            <td>2 → 3 ✦</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+              <td><img src="/Site_Honkai" alt="Material A">3</td>
+              <td><img src="/Site_Honkai" alt="Material A">6</td>
+          </tr>
+          <tr>
+            <td>3 → 4 ✦</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+              <td><img src="/Site_Honkai" alt="Material A">7</td>
+              <td><img src="/Site_Honkai" alt="Material A">9</td>
+          </tr>
+          <tr>
+            <td>4 → 5 ✦</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+              <td><img src="/Site_Honkai" alt="Material A">20</td>
+              <td><img src="/Site_Honkai" alt="Material A">6</td>
+          </tr>
+          <tr>
+            <td>5 → 6 ✦</td>
+            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+              <td><img src="/Site_Honkai" alt="Material A">35</td>
+              <td><img src="/Site_Honkai" alt="Material A">9</td>
+          </tr>
+        </tbody>
+      </table>
+    <h2><span class="mw-headline" id="Eidolons"><font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;">Habilidades de combate</font></font></span></h2> 
+    <table>            
+      <thead>
+      <tr>
+        <th>Icone</th>
+        <th>Tipo</th>
+        <th>Nome</th>
+        <th>Descrição</th>
+        <th>Marcação</th>
+        <th>Energia</th>
+        <th>Resistência
+          DMG</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="dark-background"><img src="" alt="Basic"></td>
+        <td>ATK básico</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="" alt="Skill"></td>
+        <td>Skill</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="" alt="Ult"></td>
+        <td>Ultimate</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="" alt="Talent"></td>
+        <td>Talento</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="" alt="Talent"></td>
+        <td>Técnica</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+    <h2><span class="mw-headline" id="Eidolons"><font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;">Eidolons</font></font></span></h2> 
+    <table>
+      <thead>
+        <tr>
+          <th>Icone</th>
+          <th>Nome da habilidade</th>
+          <th>Nivel</th>
+          <th>Descrição</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
+          <td></td>
+          <td>1</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
+          <td></td>
+          <td>2</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
+          <td></td>
+          <td>3</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
+          <td></td>
+          <td>4</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
+          <td></td>
+          <td>5</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="" alt="Eidolon"></td>
+          <td></td>
+          <td>6</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+    <h2><span class="mw-headline" id="Eidolons"><font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;">Traços</font></font></span></h2>
+    
+    <table>
+      <thead>
+        <tr>
+          <th>Custo Total (1 → 6 para rastreamento de ATK básico)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">6</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">7</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">7</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">3</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">8</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">11</td>
+        </tr>
+      </tbody>
+    </table>
+    <table>
+      <thead>
+        <tr>
+          <th>Custo total (1 → 10 para um rastreamento)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">9</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">13</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">7</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">3</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">15</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">30</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">3</td>
+          <td class="material-cell"><img src="/Site_Honkai" alt="Custo">1</td>
+        </tr>
+      </tbody>
+    </table>
 <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #b8783c1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;">
   <div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;">
     <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html" style="color: black;">Voltar para o início</a></font></font></i>
